# Shaman-DE

./: CONTRIBUTING.MD  LICENSE  README.md
config/: vault_watch.toml
jobshaman-grid-v2/: Cargo.toml
jobshaman-grid-v2/config/: agent_permissions.toml
jobshaman-grid-v2/src/: agent.rs  watcher.rs
jobshaman-grid-v2/src/widgets/: system.rs  terminal.rs
src/: bento_grid.rs  main.rs  permissions.rs  storage.rs
src/widgets/: mod.rs
